✨ feat: jwt 토큰을 검증할 수 있는 필터 생성과 사용자 정보를 담은 객체 (#31) (#32)